# Parking

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  clean_pip.py  colors.py  conftest.py  docker-compose.yml  index.html  main.py  parking_data_20240728_130805.csv  pyproject.toml  pyproject_OM.toml  requirements.txt  start.py
DS/main/: configures.py  constants.py  functions.py  image_process_async.py  test_import.py  use_model.py  use_model_2.py  use_model_old.py  use_ocr.py
DS/models/: model_ua_license_plate.keras
DS/notebook/: model_character_recognition.keras  model_ua_license_plate.ipynb  model_ua_license_plate_square.ipynb  plate_recognizable_model_keras.ipynb  use_model_ua_license_plate.ipynb
DS/ocr/: ocr_best.ipynb  ocr_easy.ipynb  ocr_segment.ipynb
alembic/: env.py
alembic/versions/: 3e4ee03d88d0_nullable_true.py  5ecce3388348_delete_2_fields_in_parking_session.py  9e5efa95a871_add_end_date_to_vehicle.py  a0a0ae85f3b1_chnge_relationship.py  a952c980900e_change_field_updated_at.py  b68ff813a421_init.py  ca4296526639_update_role_enum_to_replace_guest_with_.py  cfd3ab984560_add_end_date_to_vehicle_v2.py  de3d211725cb_del_relationship.py
docs/: conf.py
migrations/: env.py
migrations/versions/: 1124751a6462_delete_lazy_joined.py  518b80a42113_new_init.py  aae1a8cddec8_.py  (+4 more)
templates/: backup.html  index.html
tests/: test_auth.py  test_comments.py  test_e2e_auth.py  test_e2e_comments.py  test_e2e_ratings.py  test_e2e_user.py  test_photos.py  test_ratings.py  test_routes_photos.py  test_unit_repository_users.py
(+87 files in other folders)
