[tool.poetry]
name = "Parking"
version = "0.1.0"
description = "DataScience Recognition licence plate"
authors = ["1Oleksandr <kondratiuk.ai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.7"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
email-validator = "^2.1.0.post1"
pydantic = {extras = ["email"], version = "^2.6.1"}
sqlalchemy-utils = "^0.41.1"
phonenumbers = "^8.13.30"
postgres = "^4.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.2"
fastapi-users-db-sqlalchemy = "^6.0.1"
fastapi-mail = "^1.4.1"
libgravatar = "^1.0.4"
redis = "^5.0.1"
python-dotenv = "^1.0.1"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.38.0"
pytest = "^8.0.2"
databases = "^0.9.0"
setuptools = "^69.2.0"
faker = "^24.3.0"
qrcode = "^7.4.2"
tensorflow = "^2.16.0"
keras = "^3.4.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
ipykernel = "^6.29.5"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests", ]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"
